<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewAgrur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/AGRUR"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextVariete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAdresse"
        android:layout_below="@+id/editTextAdresse"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/Variete"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextSuperficie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextVariete"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/Superficie" />

    <EditText
        android:id="@+id/editTextAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAgrur"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/Adresse"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editTextArbres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSuperficie"
        android:layout_below="@+id/editTextSuperficie"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/Arbres" />

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextArbres"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/Valider" />

</RelativeLayout>
